--- a/Bias_Correction_Report.Rmd
+++ b/Bias_Correction_Report.Rmd
@@ -8,12 +8,75 @@ always_allow_html: yes
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
+
+library(knitr)
+library(rmarkdown)
+library(xtable)
+
+source("DIF_Methods_Functions.R")
+source("DIF_Methods_Wrappers.R")
+source("Measure_Level_Wrapper.R")
+
 ```
 
-Table of effect sizes - refer to Table 9 in WB paper
+```{r Analysis, echo = FALSE, include = FALSE}
 
-Column for original score, column for bias corrected score, mean differences, reliabilities
+## Conducting the DIF analysis
+DIF_Results <- DIF_analysis(MeasureData = NumberRecog_Treated$MeasureData,
+                                        groupvec = NumberRecog_Treated$GroupVector,
+                                        scoreType = "Total", methods = c("loess", "MH", "logistic", "IRT"),
+                                        MHstrata = tenths)
+
+```
+
 
 
 Supplemental text:
 How were the bias items detected?
+
+## Loess
+
+```{r loess}
+print(DIF_Results$loess$plot)
+```
+
+
+
+## Mantel-Haenszel
+
+```{r MH}
+xtable(DIF_Results$MH)
+```
+
+
+
+## Logistic Regression
+
+```{r Logistic Global}
+xtable(DIF_Results$logistic$Global)
+```
+
+
+```{r Logistic Item}
+xtable(DIF_Results$logistic$Item)
+```
+
+
+
+## Item Response Theory
+
+
+```{r IRT Global}
+xtable(DIF_Results$IRT$Global)
+```
+
+
+```{r IRT Item}
+xtable(DIF_Results$IRT$Item)
+```
+
+
+
+Table of effect sizes - refer to Table 9 in WB paper
+
+Column for original score, column for bias corrected score, mean differences, reliabilities
