--- a/WB_project_decisions.Rmd
+++ b/WB_project_decisions.Rmd
@@ -31,7 +31,7 @@ check <- MalawiData[384:403] %>%
 
 Comparing results from our code to using the difR package as a sensitivity check
  - Would need to write a function to extract the relevant info into the dataframe output we desire since the difR output is disjointed
- - Also a bit difficult to determine what is going on "under the hood". Need to review the workhorse functions to determine what procedures are exactly being used, and how many tests are conducted, etc...
+ - Also a bit difficult to determine what is going on "under the hood" in difR. Need to review the workhorse functions to determine what procedures are exactly being used, and how many tests are conducted, etc...
  - At first glance, it does not seem like using difR would save much time/debugging issues 
 
 
