--- a/inst/rmd/Bias-Correction-Report.Rmd
+++ b/inst/rmd/Bias-Correction-Report.Rmd
@@ -77,6 +77,17 @@ if(nvgi != "none"){
 ```
 
 
+```{r score.plot, results='asis', message=FALSE, fig.width = 5, fig.height = 6}
+
+if(!is.null(score.plot)){
+  cat("## Total Score Plots")
+  cat("\n\n")
+  
+  gridExtra::grid.arrange(score.plot$Score, score.plot$Bias)
+}
+```
+
+
 
 ```{r Summary Table, results='asis', ft.align="left"}
 
@@ -99,7 +110,12 @@ if(is.null(tx.group)){
   unctab <- format_flex(uncond.effects$effects.table)
   cat(knit_print(unctab))
   cat("\n\n")
-  
+  cat("&nbsp;  ")
+  cat("*Note:* Adj. Delta  = Total Delta / sqrt(Reliability)")
+  cat("\n\n")
+  cat("&nbsp;  ")
+  print(uncond.effects$effects.plot)
+
 } else {
 
   cat("## Treatment Effects Conditional on ", dif.group.name)
@@ -119,6 +135,11 @@ if(is.null(tx.group)){
   condeff1tab <- format_flex(cond.effects1$effects.table)
   cat(knit_print(condeff1tab))
   cat("\n\n")
+  cat("&nbsp;  ")
+  cat("*Note:* Adj. Delta  = Total Delta / sqrt(Reliability)")
+  cat("\n\n")
+  cat("&nbsp;  ")
+  print(cond.effects1$effects.plot)
 
   cat("&nbsp;  ")
   cat("\n\n")
@@ -129,6 +150,11 @@ if(is.null(tx.group)){
   condeff2tab <- format_flex(cond.effects2$effects.table)
   cat(knit_print(condeff2tab))
   cat("\n\n")
+  cat("&nbsp;  ")
+  cat("*Note:* Adj. Delta  = Total Delta / sqrt(Reliability)")
+  cat("\n\n")
+  cat("&nbsp;  ")
+  print(cond.effect21$effects.plot)
   
   cat("&nbsp;  ")
   cat("\n\n")
@@ -138,24 +164,13 @@ if(is.null(tx.group)){
   inttab <- format_flex(interaction.effects$effects.table)
   cat(knit_print(inttab))
   cat("\n\n")
+  cat("&nbsp;  ")
+  cat("*Note:* Adj. Delta  = Total Delta / sqrt(Reliability)")
+  cat("\n\n")
+  cat("&nbsp;  ")
+  print(interaction.effects$effects.plot)
 }
 
-cat("&nbsp;  ")
-cat("*Note:* Adj. Delta  = Scale Delta / sqrt(Reliability)")
-  
-```
-
-
-```{r test.plot, results='asis'}
-
-if(!is.null(test.plot)){
-  cat("## Measure Score Plots")
-  cat("\n\n")
-  cat("Expected Measure Score and Score Bias by IRT Score ($\theta$)")
-  cat("\n\n")
-  
-  print(gridExtra::grid.arrange(test.plot$Score, test.plot$Bias))
-}
 ```
 
 
@@ -166,8 +181,17 @@ if(!is.null(test.plot)){
 
 ```{r bi summary, ft.align="left"}
 
-bi.flex <- format_flex(bi.df)
-knit_print(bi.flex)
+if(nrow(bi.df) != 0){
+    bi.flex <- format_flex(bi.df)
+    knit_print(bi.flex)
+    cat("\n\n")
+    cat("&nbsp;  ")
+    cat("*Note:* X = method determined item to be biased")
+    cat("\n\n")
+} else {
+    cat("Item bias was not detected by any of the selected methods")
+    cat("\n\n")
+}
 
 ```
 
