--- a/inst/rmd/Bias-Correction-Report.Rmd
+++ b/inst/rmd/Bias-Correction-Report.Rmd
@@ -89,7 +89,7 @@ if(!is.null(score.plot)){
 
 
 
-```{r Summary Table, results='asis', ft.align="left"}
+```{r Summary Table, results='asis', warning=FALSE, ft.align="left", fig.width = 5, fig.height = 4}
 
 if(is.null(tx.group)){
   
@@ -114,6 +114,7 @@ if(is.null(tx.group)){
   cat("*Note:* Adj. Delta  = Total Delta / sqrt(Reliability)")
   cat("\n\n")
   cat("&nbsp;  ")
+  
   print(uncond.effects$effects.plot)
 
 } else {
@@ -139,6 +140,7 @@ if(is.null(tx.group)){
   cat("*Note:* Adj. Delta  = Total Delta / sqrt(Reliability)")
   cat("\n\n")
   cat("&nbsp;  ")
+  
   print(cond.effects1$effects.plot)
 
   cat("&nbsp;  ")
@@ -154,7 +156,8 @@ if(is.null(tx.group)){
   cat("*Note:* Adj. Delta  = Total Delta / sqrt(Reliability)")
   cat("\n\n")
   cat("&nbsp;  ")
-  print(cond.effect21$effects.plot)
+  
+  print(cond.effects2$effects.plot)
   
   cat("&nbsp;  ")
   cat("\n\n")
@@ -168,6 +171,7 @@ if(is.null(tx.group)){
   cat("*Note:* Adj. Delta  = Total Delta / sqrt(Reliability)")
   cat("\n\n")
   cat("&nbsp;  ")
+  
   print(interaction.effects$effects.plot)
 }
 
@@ -179,11 +183,11 @@ if(is.null(tx.group)){
 
 ## Biased Item Summary
 
-```{r bi summary, ft.align="left"}
+```{r bi summary, results = 'asis', ft.align="left"}
 
 if(nrow(bi.df) != 0){
     bi.flex <- format_flex(bi.df)
-    knit_print(bi.flex)
+    cat(knit_print(bi.flex))
     cat("\n\n")
     cat("&nbsp;  ")
     cat("*Note:* X = method determined item to be biased")
@@ -196,7 +200,7 @@ if(nrow(bi.df) != 0){
 ```
 
 
-```{r loess, results='asis', fig.width = 10, fig.height = ceiling(n.items / 6)*2 + 1}
+```{r loess, results='asis', warning=FALSE, fig.width = 10, fig.height = ceiling(n.items / 6)*2 + 1}
 
 if(!is.null(dif.analysis$loess)){
   cat("## Graphical Analysis via loess")
